# zen-whisper

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.example.toml  pyproject.toml  start.vbs
.github/workflows/: test.yml
src/: audio_devices.py  config.py  hotkey.py  main.py  overlay.py  paster.py  recorder.py  sounds.py  startup.py  transcriber.py  tray.py
src/asr/: base.py  qwen.py  reazon.py  whisper.py
src/platform/: __init__.py  darwin.py  windows.py
tests/: conftest.py  test_audio_devices.py  test_config.py  test_hotkey.py  test_main_submit_toggle.py  test_overlay.py  test_paster.py  test_platform.py  test_reazon_backend.py  test_recorder.py  test_sounds.py  test_startup.py  test_transcriber.py
tools/: README.md  bench_compare.py  bench_cpu_asr.py  bench_qwen.py  diag_qwen.py  verify_qwen_integration.py
